playlists.php - changed replaced <center> tags with <div text-align"center"> lyrics.php - changed replaced <center> tags with <div text-align"center"> query.php - fixed bug
git-svn-id: file:///home/brian/mig/music_web/trunk@99 356dc8ab-2228-4c92-b7b5-0cb1f9e44984

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+div.center
+{
+	text-align: center;
+}
+
+table.info
+{
+	margin-left:auto;
+    margin-right:auto
+}
+
 body
 {
 	color: black;
